// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Return JSX for long string 1`] = `
<p>
  This is a very long test, which exceeds the 50 cha...
</p>
`;

exports[`Return JSX for simple string 1`] = `
<p>
  Test
</p>
`;

exports[`Return null for everything expect a string 1`] = `null`;
